# liturgical-calendar

./: .gitignore  Cargo.toml  README.md  calendar_2026.md  calendar_md.sh  kal_labels.sh  refine_latin_labels.py
.cargo/: config.toml
.github/workflows/: ci.yml
corpus/: precedence.md
corpus/romanus/autres/i18n/la/: catherinae_laboure.yaml  dionysii_et_sociorum.yaml  ludovici.yaml  martini_turonensis.yaml  vincentii_de_paul.yaml
corpus/romanus/autres/sanctorale/: benedicti_iosephi_labre.yaml  catherinae_laboure.yaml  ludovici.yaml  petri_chanel.yaml  vincentii_de_paul.yaml
corpus/romanus/continentalia/africae/sanctorale/: augustini.yaml  isidori_bakanja.yaml
corpus/romanus/continentalia/europae/sanctorale/: benedicti.yaml  catharinae_senensis.yaml  cyrilli_et_methodii.yaml  teresiae_benedictae_a_cruce.yaml
corpus/romanus/nationalia/FR/sanctorale/: benedicti_iosephi_labre.yaml  catharinae_senensis.yaml  catherinae_laboure.yaml  cesarii_arelatensis.yaml  clotildis.yaml  dionysii_et_sociorum.yaml  domina_nostra_de_la_salette.yaml  genofevae.yaml  germanae_cousin.yaml  hilarii.yaml  in_assumptione_beatae_mariae_virginis.yaml  ioannae_arcensis.yaml  ioannis_francisci_regis.yaml  ludovici.yaml  ludovici_mariae_grignion_de_montfort.yaml  margaritae_mariae_alacoque.yaml  mariae_bernardae_soubirous.yaml  mariae_magdalenae_postel.yaml  martini_turonensis.yaml  petri_chanel.yaml  pothini_et_blandinae..yaml  pothini_et_sociorum.yaml  remigii.yaml  teresiae_a_iesu_infante.yaml  teresiae_a_puero_iesu.yaml  vincentii_de_paul.yaml  yvonis.yaml
corpus/romanus/nationalia/FR/temporale/: in_baptismate_domini.yaml
corpus/romanus/universale/i18n/: a_traduire.txt  a_traduire_fr_FR.txt  apply_translations.py  translate_labels.txt  translate_labels_en_EN.txt  translate_labels_fr_FR.txt
corpus/romanus/universale/i18n/en_EN/: adalberti.yaml  agathae.yaml  agnetis.yaml  alberti_magni.yaml  ambrosii.yaml  (+289 more)
corpus/romanus/universale/temporale/: beatae_mariae_virginis_ecclesiae_matris.yaml  domini_nostri_iesu_christi_regis_universi.yaml  domini_nostri_iesu_christi_universorum_regis.yaml  dominica_i_adventus.yaml  dominica_i_quadragesimae.yaml  dominica_ii_adventus.yaml  dominica_ii_paschae.yaml  dominica_ii_post_nativitatem.yaml  dominica_ii_quadragesimae.yaml  dominica_ii_temporis_ordinarii.yaml  dominica_iii_adventus.yaml  dominica_iii_paschae.yaml  dominica_iii_per_annum.yaml  dominica_iii_quadragesimae.yaml  dominica_iii_temporis_ordinarii.yaml  dominica_in_palmis_de_passione_domini.yaml  dominica_iv_adventus.yaml  dominica_iv_paschae.yaml  dominica_iv_per_annum.yaml  dominica_iv_quadragesimae.yaml  dominica_iv_temporis_ordinarii.yaml  dominica_ix_temporis_ordinarii.yaml  dominica_pentecostes.yaml  dominica_resurrectionis.yaml  dominica_v_paschae.yaml  dominica_v_per_annum.yaml  dominica_v_quadragesimae.yaml  dominica_v_temporis_ordinarii.yaml  dominica_vi_paschae.yaml  dominica_vi_temporis_ordinarii.yaml  dominica_vii_paschae.yaml  dominica_vii_temporis_ordinarii.yaml  dominica_viii_temporis_ordinarii.yaml  dominica_x_temporis_ordinarii.yaml  dominica_xi_per_annum.yaml  dominica_xi_temporis_ordinarii.yaml  dominica_xii_temporis_ordinarii.yaml  dominica_xiii_temporis_ordinarii.yaml  dominica_xiv_temporis_ordinarii.yaml  dominica_xix_per_annum.yaml  (+51 more)
crates/liturgical-calendar-flutter/: Cargo.toml  README.md
crates/liturgical-calendar-flutter/src/: lib.rs
crates/liturgical-calendar-wasm/: Cargo.toml  README.md
crates/liturgical-calendar-wasm/src/: lib.rs
docs/: YAML-hierarchy.md  cmd-cargo.md  kal-forge-guide.md  liturgical-scheme.md  specification.md
docs/adr/: adr-002-transfers-structural-prohibition.md  adr-007-slug-neutrality.md  adr-008-tempus-ordinarium-segment-i-resolution.md  adr-038.md
docs/cmd/: cmd-memento.md  kal-forge-guide.md
docs/notes/: i18n-yaml.md  lits-layout-mutation.md
docs/output-tests/: calendar_1973.md  calendar_1974.md  calendar_1975.md  calendar_1976.md  calendar_1984.md  calendar_1999.md  calendar_2000.md  calendar_2008.md  calendar_2009.md  calendar_2010.md  calendar_2016.md  calendar_2018.md  calendar_2019.md  calendar_2020.md  calendar_2021.md  calendar_2022.md  calendar_2023.md  calendar_2024.md  calendar_2025.md  calendar_2026.md  calendar_2027.md  calendar_2057.md  calendar_2399.md  calendar_2999.md
docs/outputs/: calendar_1973.md  calendar_1974.md  calendar_1976.md  calendar_1984.md  calendar_1999.md  calendar_2000.md  calendar_2008.md  calendar_2009.md  calendar_2010.md  calendar_2020.md  calendar_2021.md  calendar_2022.md  calendar_2023.md  calendar_2024.md  calendar_2025.md  calendar_2026.md  calendar_2027.md  calendar_2057.md
docs/post-mortem/: roadmap-v1.0.md  specification-v1.0.md
docs/resources/: 2026.md  Table-des-preseances-des-jours-liturgiques.md  calendrier_2026.md  olidays-were-modified-after-1969.md
docs/resources/DECRETUM/: olidays-were-modified-after-1969.md
docs/specifications/: liturgical-calendar-flutter.md  roadmap-wasm.md  segments-separation-kald.md  wrapper-flutter-specification.md  wrapper-wasm-secification.md
fuzz/fuzz_targets/: read_entry.rs
liturgical-calendar/: Cargo.toml  README.md
liturgical-calendar-core/: Cargo.toml  README.md
liturgical-calendar-core/benches/: core_bench.rs
liturgical-calendar-core/src/: entry.rs  ffi.rs  header.rs  lib.rs  lits_provider.rs  types.rs
liturgical-calendar-forge/: Cargo.toml  README.md
liturgical-calendar-forge/src/: canonicalization.rs  error.rs  i18n.rs  id_alloc.rs  ingestion.rs  lib.rs  lits_writer.rs  lock.rs  main.rs  materialization.rs  packing.rs  parsing.rs  registry.rs  resolution.rs  variant_lock.rs
liturgical-calendar-forge/tests/: conformity_2025.rs  full_range.rs  kal_read_integration.rs
liturgical-calendar/src/: lib.rs
scripts/: apply_translations.py  extract_labels_for_translation.py  generate_lits_skeletons.py
www/: app.js  calendar.kald  calendar.lits  index.html  index_local.html  liturgical_calendar_wasm.wasm  main.css  romanus_universale.kald  romanus_universale_la.lits  server.py
www/styles/: liturgical-calendar.css  main.css
(+882 files in other folders)
