[package]
name = "liturgical-calendar-core"
version = "0.1.0"
edition = "2021"
description = "Lightning-fast, no_std, no_alloc runtime for the Catholic liturgical calendar (Novus Ordo, 1969–2399). Provides O(1) read access to pre-compiled `.kald` binary tables via a C-compatible FFI."
rust-version = "1.77"
license = "MIT"                                                                                                                                                                                                # ou "Apache-2.0" ou "MIT OR Apache-2.0"
repository = "https://github.com/scriptura/liturgical-calendar"
readme = "README.md"
keywords = ["liturgy", "calendar", "catholic", "no-std", "ffi"]
categories = ["embedded", "no-std", "parser-implementations", "data-structures"]

[dependencies]
sha2 = { version = "0.10", default-features = false }

[features]
gen-headers = []
