[package]
name = "liturgical-calendar-core"
version = "0.2.0"
edition = "2024"
rust-version = "1.97.0"
description = "Lightning-fast, no_std, no_alloc runtime for the Catholic liturgical calendar (Novus Ordo, 1969–2399). Provides O(1) read access to pre-compiled `.kald` binary tables via a C-compatible FFI."
license = "MIT"
repository = "https://github.com/scriptura/liturgical-calendar"
readme = "README.md"
keywords = ["liturgy", "calendar", "catholic", "no-std", "ffi"]
categories = ["no-std::no-alloc", "date-and-time", "algorithms"]

[dependencies]
sha2 = { version = "0.10", default-features = false }

[dev-dependencies]
# Benchmarking sub-microseconde — adapté aux accès O(1) et bitshift purs.
# Nettement plus précis que Criterion sur cette plage de latence.
divan = "0.1"

[features]
gen-headers = []

# Divan requiert harness = false : il fournit son propre main().
[[bench]]
name = "core_bench"
harness = false
