[package]
name = "liturgical-calendar-forge"
version = "0.1.0"
edition = "2021"
default-run = "kal-forge"

[[bin]]
name = "kal-forge"
path = "src/main.rs"

[[bin]]
name = "kal-read"
path = "src/bin/kal_read.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.12"
sha2 = { version = "0.10", default-features = false }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
liturgical-calendar-core = { path = "../liturgical-calendar-core" }

[features]
std = []
gen-headers = ["cbindgen"]

[build-dependencies]
cbindgen = { version = "0.26", optional = true }
