[package]
name = "liturgical-calendar-forge"
version = "0.1.4"
edition = "2024"
rust-version = "1.97.0"
description = "Ahead-of-time compiler for the Catholic liturgical calendar. Ingests a YAML corpus of feasts, precedence, and transfer rules, resolves all conflicts, and emits pre-validated binary artifacts (`.kald` / `.lits`) for zero-runtime-cost deployment."
default-run = "kal-forge"
license = "MIT"
repository = "https://github.com/scriptura/liturgical-calendar"
readme = "README.md"
keywords = ["liturgical", "calendar", "yaml", "compiler", "aot"]
categories = ["compilers", "command-line-utilities", "parser-implementations"]

[[bin]]
name = "kal-forge"
path = "src/main.rs"

[[bin]]
name = "kal-read"
path = "src/bin/kal_read.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.12"
sha2 = { version = "0.10", default-features = false }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
liturgical-calendar-core = { version = "0.1.4", path = "../liturgical-calendar-core" }

[features]
std = []
gen-headers = ["cbindgen"]

[build-dependencies]
cbindgen = { version = "0.26", optional = true }
