[package]
name        = "liturgical-calendar"
version     = "0.1.0"
edition     = "2021"
description = "Liturgical calendar engine for the Catholic Novus Ordo — runtime facade"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/nunn/liturgical-calendar"
readme      = "README.md"
keywords    = ["liturgical", "calendar", "catholic", "engine", "compiler"]
categories  = ["data-structures", "embedded", "compilers", "command-line-utilities"]

[dependencies]
liturgical-calendar-core = { version = "0.1.0", path = "../liturgical-calendar-core" }
