[package]
name = "liturgical-calendar"
version = "0.2.2"
edition = "2024"
rust-version = "1.97.0"
description = "Liturgical calendar engine for the Catholic Novus Ordo — runtime facade"
license = "MIT OR Apache-2.0"
repository = "https://github.com/scriptura/liturgical-calendar"
readme = "README.md"
keywords = ["liturgical", "calendar", "catholic", "engine", "compiler"]
categories = ["data-structures", "compilers", "command-line-utilities"]

[dependencies]
liturgical-calendar-core = { version = "0.2.1", path = "../liturgical-calendar-core" }
