[package]
name = "liturgical-calendar-wasm"
version = "0.2.1"
edition = "2024"
rust-version = "1.97.0"
description = "WASM bindings for the liturgical-calendar engine. Provides a zero-copy, no_std interface to query the Roman Catholic liturgical calendar (1969–2399) from .kald and .lits binary files, compiled to WebAssembly."
license = "MIT OR Apache-2.0"
repository = "https://github.com/scriptura/liturgical-calendar"
readme = "README.md"
keywords = ["liturgical", "calendar", "web", "ffi", "bindings"]
categories = ["wasm"]

[lib]
crate-type = ["cdylib"]

[dependencies]
liturgical-calendar-core = { version = "0.2.1", path = "../../liturgical-calendar-core", default-features = false }
